# gemma-4-mic-transcribe

./: .formatter.exs  .gitignore  .tool-versions  README.md  gemma_4_mic_transcribe  main.py  mise.toml  mix.exs  pyproject.toml
config/: config.exs
lib/: gemma_4_mic_transcribe.ex
lib/gemma_4_mic_transcribe/: audio.ex  cascade_runtime.ex  cli.ex  config.ex  decoder_block_cli.ex  decoder_pipeline_benchmark.ex  expert_cli.ex  gemma4.ex  handoff_probe.ex  handoff_probe_cli.ex  model_catalog.ex  rocm_preflight.ex  single_word_benchmark.ex  speech_gate.ex  streaming_session.ex  trace.ex  transcriber.ex
scripts/: cuda_q4_smoke.exs  setup.sh
scripts/trace/: hip-latency.sh
src/gemma_4_mic_transcribe/: __init__.py  __main__.py  audio.py  cli.py  litert.py  worker.py
test/gemma_4_mic_transcribe/: audio_test.exs  cascade_runtime_test.exs  cli_test.exs  decoder_block_cli_test.exs  decoder_pipeline_benchmark_test.exs  expert_cli_test.exs  gemma4_decoder_blocks_test.exs  gemma4_decoder_pipeline_test.exs  gemma4_e4b_audio_encoder_test.exs  gemma4_e4b_decoder_test.exs  gemma4_e4b_mel_features_test.exs  gemma4_e4b_model_test.exs  gemma4_e4b_spec_test.exs  gemma4_expert_artifact_test.exs  gemma4_expert_caller_artifact_test.exs  gemma4_expert_caller_test.exs  gemma4_experts_test.exs  gemma4_extracted_generator_server_test.exs  gemma4_ffns_test.exs  gemma4_layer_probe_test.exs  gemma4_math_expert_profiler_test.exs  gemma4_moe_layer_artifact_test.exs  gemma4_output_head_artifact_test.exs  gemma4_unified_test.exs  trace_test.exs  (+7 more)
tests/: test_audio.py  test_cli.py  test_litert.py
(+41 files in other folders)
