[project]
name = "gemma-4-mic-transcribe"
version = "0.1.0"
description = "Local microphone transcription with Gemma 4 and LiteRT-LM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litert-lm-api>=0.1.0",
    "numpy>=2.0.0",
    "sounddevice>=0.5.0",
]

[project.scripts]
gemma-4-mic-transcribe = "gemma_4_mic_transcribe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
